@@ -1,3 +1,7 @@
+2025-09-10  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed crashing bug for opening truncated files (Bug 509364).
+
 2025-09-07  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated saving to remove images no longer in collection (Bug 509244).
